objects/Event__c.object
<CustomObject>
    <label>Event</label>
    <nameField>
        <displayFormat>EVT-{0000}</displayFormat>
        <label>Event</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Live__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Live?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>post Poned</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Recurring__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Seats__c</fullName>
        <label>Max Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organizer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organizer</label>
        <referenceTo>Event_Organi__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Person</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Remainig_Seats__c</fullName>
        <formula>Max_Seats__c  -  People_Attending__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remainig Seats</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>People_Attending__c</fullName>
        <label>People Attending</label>
        <summaryForeignKey>Event_Attendee__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location_Verified__c</fullName>
        <formula>Location__r.Verified__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Verified</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>End_Date_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c  &gt;= End_Date__c</errorConditionFormula>
        <errorMessage>Start date should not be greater than End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recurring_Rule</fullName>
        <active>true</active>
        <description>if recurring checkbox is true need to fill the Frequency field</description>
        <errorConditionFormula>Recurring__c = True   &amp;&amp;  ISBLANK( TEXT(Frequency__c))</errorConditionFormula>
        <errorDisplayField>Frequency__c</errorDisplayField>
        <errorMessage>Frequency Filed should not be Blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Event_Type_Field_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Event_Type__c, &apos;Virtual&apos;) &amp;&amp; NOT(ISBLANK(Location__c))</errorConditionFormula>
        <errorDisplayField>Location__c</errorDisplayField>
        <errorMessage>Not Select any Value in Location Field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Event_type_is_In_Person_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Event_Type__c,&apos;In-Person&apos; )  &amp;&amp;  ISBLANK(Location__c )</errorConditionFormula>
        <errorDisplayField>Location__c</errorDisplayField>
        <errorMessage>Please Select Any Of The Location</errorMessage>
    </validationRules>
</CustomObject>